add on module and some basic changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
      <!-- navbar -->
      <nav class="navbar">
-        <h1 class="logo">ADVANTURE</h1>
+        <h1 class="logo">NATURE SAFARI</h1>
         <ul class="nav-link">
-            <li class="active"><a href="#"></a>Home</li>
-            <li><a href="#"></a>Tours</li>
-            <li><a href="#"></a>Explore</li>
-            <li><a href="#"></a>About</li>
-            <li class="ctn"><a  href="#"></a>Contact</li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#">Tours</a></li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="About.html">About</a></li>
+            <li class="ctn"><a  href="#">Contact</a></li>
         </ul>
         <img src="./img/menubtn.png" alt="" class="menu-btn">
     </nav>
@@ -82,7 +82,7 @@
 
     <section class="footer">
         <p>Deoghar college Deoghar jharkhand | Phone: 8051046923 | Email: content234@gmail.com</p>
-        <p>Copyright (c) 2022 December Adventure</p>
+        <p>Copyright &copy; 2022 December Adventure</p>
     </section>
     <script>
         const menuBtn = document.querySelector('.menu-btn')
